Replace legacy/deprecated code with standard library code.