@@ -317,7 +317,7 @@ public class MassToFingerprintGroupListCollection extends DefaultList {
 			}
 		}
 		System.out.println();
-		this.maximumAnnotatedID = new Integer(maxAnnotatedId); 
+		this.maximumAnnotatedID = Integer.valueOf(maxAnnotatedId); 
 	}
 	
 	// calculate N^(s)
